--- a/Lectures/LAB - Week 7.ipynb
+++ b/Lectures/LAB - Week 7.ipynb
@@ -121,10 +121,10 @@
      "evalue": "'Cat' object has no attribute '__name'",
      "output_type": "error",
      "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
-      "\u001b[1;32m/home/vin/Dropbox/COMP6047001-L1BC-2022/Lectures/LAB - Week 7.ipynb Cell 9\u001b[0m in \u001b[0;36m<cell line: 9>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      <a href='vscode-notebook-cell:/home/vin/Dropbox/COMP6047001-L1BC-2022/Lectures/LAB%20-%20Week%207.ipynb#X11sZmlsZQ%3D%3D?line=5'>6</a>\u001b[0m maguro \u001b[39m=\u001b[39m Cat(\u001b[39m\"\u001b[39m\u001b[39mMaguro\u001b[39m\u001b[39m\"\u001b[39m, \u001b[39m\"\u001b[39m\u001b[39mRed\u001b[39m\u001b[39m\"\u001b[39m)\n\u001b[1;32m      <a href='vscode-notebook-cell:/home/vin/Dropbox/COMP6047001-L1BC-2022/Lectures/LAB%20-%20Week%207.ipynb#X11sZmlsZQ%3D%3D?line=6'>7</a>\u001b[0m macha \u001b[39m=\u001b[39m Cat(\u001b[39m\"\u001b[39m\u001b[39mMacha\u001b[39m\u001b[39m\"\u001b[39m, \u001b[39m\"\u001b[39m\u001b[39mGreen\u001b[39m\u001b[39m\"\u001b[39m)\n\u001b[0;32m----> <a href='vscode-notebook-cell:/home/vin/Dropbox/COMP6047001-L1BC-2022/Lectures/LAB%20-%20Week%207.ipynb#X11sZmlsZQ%3D%3D?line=8'>9</a>\u001b[0m \u001b[39mprint\u001b[39m(\u001b[39mf\u001b[39m\u001b[39m\"\u001b[39m\u001b[39mName: \u001b[39m\u001b[39m{\u001b[39;00mmaguro\u001b[39m.\u001b[39m__name\u001b[39m}\u001b[39;00m\u001b[39m, Color: \u001b[39m\u001b[39m{\u001b[39;00mmaguro\u001b[39m.\u001b[39m__color\u001b[39m}\u001b[39;00m\u001b[39m\"\u001b[39m)\n",
-      "\u001b[0;31mAttributeError\u001b[0m: 'Cat' object has no attribute '__name'"
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
+      "\u001b[1;32mc:\\Users\\Vincent\\Dropbox\\COMP6047001-L1BC-2022\\Lectures\\LAB - Week 7.ipynb Cell 9\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/Users/Vincent/Dropbox/COMP6047001-L1BC-2022/Lectures/LAB%20-%20Week%207.ipynb#X11sZmlsZQ%3D%3D?line=5'>6</a>\u001b[0m maguro \u001b[39m=\u001b[39m Cat(\u001b[39m\"\u001b[39m\u001b[39mMaguro\u001b[39m\u001b[39m\"\u001b[39m, \u001b[39m\"\u001b[39m\u001b[39mRed\u001b[39m\u001b[39m\"\u001b[39m)\n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/Users/Vincent/Dropbox/COMP6047001-L1BC-2022/Lectures/LAB%20-%20Week%207.ipynb#X11sZmlsZQ%3D%3D?line=6'>7</a>\u001b[0m macha \u001b[39m=\u001b[39m Cat(\u001b[39m\"\u001b[39m\u001b[39mMacha\u001b[39m\u001b[39m\"\u001b[39m, \u001b[39m\"\u001b[39m\u001b[39mGreen\u001b[39m\u001b[39m\"\u001b[39m)\n\u001b[1;32m----> <a href='vscode-notebook-cell:/c%3A/Users/Vincent/Dropbox/COMP6047001-L1BC-2022/Lectures/LAB%20-%20Week%207.ipynb#X11sZmlsZQ%3D%3D?line=8'>9</a>\u001b[0m \u001b[39mprint\u001b[39m(\u001b[39mf\u001b[39m\u001b[39m\"\u001b[39m\u001b[39mName: \u001b[39m\u001b[39m{\u001b[39;00mmaguro\u001b[39m.\u001b[39m__name\u001b[39m}\u001b[39;00m\u001b[39m, Color: \u001b[39m\u001b[39m{\u001b[39;00mmaguro\u001b[39m.\u001b[39m__color\u001b[39m}\u001b[39;00m\u001b[39m\"\u001b[39m)\n",
+      "\u001b[1;31mAttributeError\u001b[0m: 'Cat' object has no attribute '__name'"
      ]
     }
    ],
@@ -203,12 +203,64 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### isinstance"
+    "##### To String"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "My name is Maguro and I'm Red color\n",
+      "My name is Macha and I'm Green color\n"
+     ]
+    }
+   ],
+   "source": [
+    "class Cat:\n",
+    "    def __init__(self, name: str, color: str):\n",
+    "        self.__name = name\n",
+    "        self.__color = color\n",
+    "\n",
+    "    # Getter Functions/Methods\n",
+    "    def get_name(self):\n",
+    "        return self.__name\n",
+    "\n",
+    "    def get_color(self):\n",
+    "        return self.__color\n",
+    "\n",
+    "    # Setter Functions/Methods\n",
+    "    def set_name(self, name: str):\n",
+    "        self.__name = name\n",
+    "    \n",
+    "    def set_color(self, color: str):\n",
+    "        self.__color = color\n",
+    "\n",
+    "    # class to string\n",
+    "    def __str__(self):\n",
+    "        return f\"My name is {self.__name} and I'm {self.__color} color\"\n",
+    "\n",
+    "maguro = Cat(\"Maguro\", \"Red\")\n",
+    "macha = Cat(\"Macha\", \"Green\")\n",
+    "\n",
+    "print(maguro)\n",
+    "print(macha)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### isinstance"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
